--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.Basay.Vrata">
     <!-- говорим о том что хотим универсальное приложение а не только на TV -->
     <uses-feature
         android:name="android.software.leanback"
         android:required="false" />
     <!-- говорим что нам не обязателен touchscreen -->
-    <uses-feature android:name="android.hardware.touchscreen"
+    <uses-feature
+        android:name="android.hardware.touchscreen"
         android:required="false" />
     <!-- говорим о том, что локация нам не обязательна -->
     <uses-feature
@@ -20,9 +22,11 @@
     <uses-feature
         android:name="android.permission.RECORD_AUDIO"
         android:required="false" />
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/vrata_icon"
@@ -30,15 +34,21 @@
         android:roundIcon="@mipmap/vrata_icon_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Vrata"
-        android:networkSecurityConfig ="@xml/network_security_config"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:usesCleartextTraffic="true"
+
         >
-        <activity android:name="com.Basay.Vrata.MainActivity"
-                  android:theme="@style/Theme.AppCompat.NoActionBar">
+        <activity
+            android:name="com.Basay.Vrata.MainActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <!-- для голосового управления -->
+
+
         </activity>
         <!-- MI BOX S -->
         <activity
@@ -47,10 +57,16 @@
             android:banner="@mipmap/banner"
             android:noHistory="true">
             <intent-filter>
+                <!-- для работы на TV -->
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- для голосового управления -->
+        <meta-data
+            android:name="com.google.android.actions"
+            android:resource="@xml/actions" />
     </application>
 
 </manifest>
