--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.Basay.Vrata">
     <!-- говорим о том что хотим универсальное приложение а не только на TV -->
     <uses-feature
@@ -32,6 +33,7 @@
         android:theme="@style/Theme.Vrata"
         android:networkSecurityConfig ="@xml/network_security_config"
         android:usesCleartextTraffic="true"
+
         >
         <activity android:name="com.Basay.Vrata.MainActivity"
                   android:theme="@style/Theme.AppCompat.NoActionBar">
@@ -39,6 +41,22 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <!-- для голосового управления -->
+            <intent-filter
+                android:autoVerify="true"
+                tools:targetApi="m">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="fit-actions.firebaseapp.com"
+                    android:scheme="https" />
+            </intent-filter>
+
+
         </activity>
         <!-- MI BOX S -->
         <activity
@@ -47,10 +65,14 @@
             android:banner="@mipmap/banner"
             android:noHistory="true">
             <intent-filter>
+                <!-- для работы на TV -->
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- для голосового управления -->
+        <meta-data android:name="com.google.android.actions" android:resource="@xml/actions" />
     </application>
 
 </manifest>
